force-app/main/default/objects/Contract_Terms_and_Conditions__c/Contract_Terms_and_Conditions__c.object-meta.xml
<CustomObject>
    <description>To store terms and conditions associated with each contract</description>
    <label>Contract Terms and Conditions</label>
    <nameField>
        <displayFormat>NS-{000000000}</displayFormat>
        <label>Contract Terms and Conditions</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Terms and Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>