force-app/main/default/objects/Contract_Terms_and_Conditions__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Non_Standard_Term_Repository</relationshipName>
    <type>Lookup</type>
</CustomField>