force-app/main/default/objects/Contract_Terms_and_Conditions__c/fields/Non_Standard_Term_Repository__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Term_Repository__c</fullName>
    <label>Contract Standard Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acceptance</fullName>
            </value>
            <value>
                <fullName>Assignment</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Bundled Services</fullName>
            </value>
            <value>
                <fullName>Confidentiality</fullName>
            </value>
            <value>
                <fullName>Customer Requirements</fullName>
            </value>
            <value>
                <fullName>Delivery Requirements</fullName>
            </value>
            <value>
                <fullName>Exclusivity</fullName>
            </value>
            <value>
                <fullName>Export Compliance</fullName>
            </value>
            <value>
                <fullName>Fees/Rebates</fullName>
            </value>
            <value>
                <fullName>Hardware Service</fullName>
            </value>
            <value>
                <fullName>Indemnification</fullName>
            </value>
            <value>
                <fullName>Insurance Requirements</fullName>
            </value>
            <value>
                <fullName>Intellectual Property</fullName>
            </value>
            <value>
                <fullName>Invoicing</fullName>
            </value>
            <value>
                <fullName>Lemon / Failure</fullName>
            </value>
            <value>
                <fullName>Limitation of Liability</fullName>
            </value>
            <value>
                <fullName>Liquidated Damages/Penalties</fullName>
            </value>
            <value>
                <fullName>MDF</fullName>
            </value>
            <value>
                <fullName>MFN</fullName>
            </value>
            <value>
                <fullName>Off-Shoring</fullName>
            </value>
            <value>
                <fullName>Order Modification / Cancel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Payment Terms</fullName>
            </value>
            <value>
                <fullName>Price Protection</fullName>
            </value>
            <value>
                <fullName>Pricing/Discounts</fullName>
            </value>
            <value>
                <fullName>Product Quality</fullName>
            </value>
            <value>
                <fullName>Publicity / Press Releases / LOGOs</fullName>
            </value>
            <value>
                <fullName>Regulatory Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>