force-app/main/default/objects/Contract_Terms_and_Conditions__c/fields/Non_Standard_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Terms_and_Conditions__c</fullName>
    <label>Contract Terms and Conditions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>