force-app/main/default/objects/Contract_Terms_and_Conditions__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <length>200</length>
    <type>Text</type>
</CustomField>