force-app/main/default/objects/Contract_Terms_and_Conditions__c/fields/Standard_Term__c.field-meta.xml
<CustomField>
    <fullName>Standard_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Term</label>
    <referenceTo>CSMB_Terms_and_Conditions_Maintenance__c</referenceTo>
    <relationshipLabel>Contract Terms and Conditions</relationshipLabel>
    <relationshipName>Contract_Terms_and_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>