force-app/main/default/objects/Contract_Terms_and_Conditions__c/fields/Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Terms and Conditions</label>
    <referenceTo>CSMB_Terms_and_Condition__c</referenceTo>
    <relationshipLabel>Contract Terms and Conditions</relationshipLabel>
    <relationshipName>Contract_Terms_and_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>