force-app/main/default/objects/Contract_Terms_and_Conditions__c/fields/Terms_and_conditions_Content__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_conditions_Content__c</fullName>
    <label>Terms and conditions Content</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>