force-app/main/default/objects/Contract_Terms_and_Conditions__c/recordTypes/Non_Standard_Terms_and_Conditions.recordType-meta.xml
<RecordType>
    <fullName>Non_Standard_Terms_and_Conditions</fullName>
    <active>true</active>
    <description>To allow user to enter non- standard terms and conditions</description>
    <label>Non-Standard Terms and Conditions</label>
</RecordType>