force-app/main/default/objects/Contract_Terms_and_Conditions__c/recordTypes/Standard_Terms_and_Conditions.recordType-meta.xml
<RecordType>
    <fullName>Standard_Terms_and_Conditions</fullName>
    <active>true</active>
    <description>Record Type to allow user to select standard terms and conditions</description>
    <label>Standard Terms and Conditions</label>
</RecordType>